Add admin dashboard and user management features
- Added new forms: AdminAddUsers, AdminDashboardForm, and AdminMainForm, along with their designer and resource files.
- Updated CofeShopManagmentSystem.csproj to include new files, resources, and image assets (Customer.png, Customer 2.png, money.png, money.jpg).
- Modified Form1.cs to open AdminMainForm on successful login and improved SqlConnection string readability.
- Added AdminAddUsersData.cs for managing user data with database integration.
- Updated Resources.Designer.cs and Resources.resx to include new image assets.
- Introduced new UI for managing users, dashboards, and admin navigation.

--- a/CofeShopManagmentSystem/CofeShopManagmentSystem.csproj
+++ b/CofeShopManagmentSystem/CofeShopManagmentSystem.csproj
@@ -46,6 +46,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminAddUsers.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AdminAddUsers.Designer.cs">
+      <DependentUpon>AdminAddUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdminAddUsersData.cs" />
+    <Compile Include="AdminDashboardForm.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AdminDashboardForm.Designer.cs">
+      <DependentUpon>AdminDashboardForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AdminMainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdminMainForm.Designer.cs">
+      <DependentUpon>AdminMainForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -60,6 +79,15 @@
     <Compile Include="Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AdminAddUsers.resx">
+      <DependentUpon>AdminAddUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminDashboardForm.resx">
+      <DependentUpon>AdminDashboardForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AdminMainForm.resx">
+      <DependentUpon>AdminMainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -91,6 +119,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assest\coffe icon.png" />
+    <None Include="Assest\money.png" />
+    <None Include="Assest\Customer 2.png" />
+    <Content Include="Assest\Customer.png" />
     <None Include="Resources\coffe icon1.png" />
     <None Include="Resources\coffe icon.png" />
   </ItemGroup>
