Add image upload and UI updates to AdminAddUsers
Updated AdminAddUsers.Designer.cs with UI adjustments, including
resizing and repositioning elements, and added support for
`PictureBoxSizeMode.AutoSize`. Refactored AdminAddUsers.cs to
improve performance by replacing `SqlDataAdapter` with
`SqlCommand.ExecuteScalar` for username checks. Added image
upload functionality to save user profile images in a new
`User_Directory` folder and store the file path in the database.
Fixed SQL `INSERT` statement typo. Updated CofeShopManagmentSystem.csproj
to include the new `User_Directory` folder. Added a sample
image file `Mohammad.jpg` for testing purposes.

--- a/CofeShopManagmentSystem/CofeShopManagmentSystem.csproj
+++ b/CofeShopManagmentSystem/CofeShopManagmentSystem.csproj
@@ -125,5 +125,8 @@
     <None Include="Resources\coffe icon1.png" />
     <None Include="Resources\coffe icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="User_Directory\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
