Enhance UI and functionality for Admin components
- Refactored variable names and reordered code in `AdminAddUsers.Designer.cs` for better readability.
- Added event handler for `adminAddUsers_updateBtn` to handle user updates.
- Improved `dataGridView1` styling and image handling in `AdminAddUsers.cs`:
  - Added robust image loading with null checks and file stream usage.
  - Added placeholders for invalid or missing images.
- Updated `AdminDashboardForm.Designer.cs`:
  - Reorganized panels and controls for better structure.
  - Added new labels and updated images for improved UI clarity.
- Updated `CofeShopManagmentSystem.csproj` to include new image assets:
  - Added `cashier-machine.png`, `customer (1).png`, `wallet.png`, and others.
- Updated `Resources.Designer.cs` and `Resources.resx` to reference new assets.
- Removed redundant code and improved maintainability.

--- a/CofeShopManagmentSystem/CofeShopManagmentSystem.csproj
+++ b/CofeShopManagmentSystem/CofeShopManagmentSystem.csproj
@@ -118,9 +118,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assest\incomes.png" />
+    <None Include="Assest\wallet.png" />
+    <None Include="Assest\cashier-machine.png" />
     <Content Include="Assest\coffe icon.png" />
     <None Include="Assest\money.png" />
     <None Include="Assest\Customer 2.png" />
+    <None Include="Assest\customer %281%29.png" />
     <Content Include="Assest\Customer.png" />
     <None Include="Resources\coffe icon1.png" />
     <None Include="Resources\coffe icon.png" />
