Add product insertion workflow with image upload and duplicate ID validation
- Implemented AdminAddProducts UserControl logic for adding new products
- Added field validation and product ID uniqueness check
- Insert product details into database using parameterized SQL
- Save product image to Product_Directory and store file path in DB
- Added import image dialog support for product images

--- a/CofeShopManagmentSystem/CofeShopManagmentSystem.csproj
+++ b/CofeShopManagmentSystem/CofeShopManagmentSystem.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminAddProducts.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AdminAddProducts.Designer.cs">
+      <DependentUpon>AdminAddProducts.cs</DependentUpon>
+    </Compile>
     <Compile Include="AdminAddUsers.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -79,6 +85,9 @@
     <Compile Include="Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AdminAddProducts.resx">
+      <DependentUpon>AdminAddProducts.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AdminAddUsers.resx">
       <DependentUpon>AdminAddUsers.cs</DependentUpon>
     </EmbeddedResource>
@@ -130,6 +139,7 @@
     <None Include="Resources\coffe icon.png" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Product_Directory\" />
     <Folder Include="User_Directory\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
